# celeryTest

./: .gitignore  README.md  app.py  dockerfile  init_db.py  mdb.sql  pyproject.toml  tasks.py  test.sqlite
